--- a/public/index.html
+++ b/public/index.html
@@ -15,21 +15,21 @@
   <meta itemprop="name" content="Dhruvan | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/Dhruvan/ze7111.github.io/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/ze7111/ze7111.github.io/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dhruvan | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/Dhruvan/ze7111.github.io/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/ze7111/ze7111.github.io/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dhruvan | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/Dhruvan/ze7111.github.io/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/ze7111/ze7111.github.io/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 </head>
 
 <body>
