--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -18,6 +18,7 @@
     content="https://raw.githubusercontent.com/ze7111/ze7111.github.io/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 
   <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://ze7111.github.io/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dhruvan | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
